Fixed horizontal break on edge

--- a/src/style/form.less
+++ b/src/style/form.less
@@ -38,7 +38,8 @@ div.form>div>h1 {
 }
 
 div.form>div>hr {
-  border: 1px solid #fff;
+  border: 0;
+  border-top: 2px solid #fff;
 }
 
 div.form>div>div.switch {
